Update box.json and readme with new locations #36 resolve

--- a/workbench/build.properties
+++ b/workbench/build.properties
@@ -11,4 +11,4 @@ wikitext.version=1.0.0
 box.repo.url=http://integration.stg.ortussolutions.com/artifacts
 
 #url locations
-url.api=http://railocboxdev.jfetmac/coldbox-core-modules/cbox-relax/apidocs/index.cfm?version=
+url.api=http://cf10cboxdev.local/coldbox-core-modules/cbox-relax/apidocs/index.cfm?version=
