finalized new build process

--- a/.gitignore
+++ b/.gitignore
@@ -2,10 +2,12 @@
 logs/*.log
 settings.xml
 .netbeans
-test/results/*.properties
-test/results/*.html
-test/results/*.log
-tests/results
-modules/cbjavaloader
+tests/results/*
 modules/cbi18n
+coldbox/*
+testbox/*
+artifacts/*
+apidocs/docbox/*
 workbench/build.number
+build/*
+modules/wikitext
