--- a/workbench/build.properties
+++ b/workbench/build.properties
@@ -1,14 +1,11 @@
 #locations
-dir.artifacts=/Users/lmajano/exports/artifacts
+dir.artifacts=${basedir}/artifacts
 dir.exports=${dir.artifacts}/${project.name}/${project.version}
 dir.build=${basedir}/build
 dir.api=${dir.build}/apidocs
 
-#dependencies
-wikitext.version=1.0.0
-
-#remote repos
-box.repo.url=http://integration.stg.ortussolutions.com/artifacts
-
-#url locations
-url.api=http://cf10cboxdev.local/coldbox-core-modules/cbox-relax/apidocs/index.cfm?version=
+# apidocs
+dir.api=${dir.build}/apidocs
+dir.apidocs=${basedir}/apidocs
+apidocs.port=8511
+url.apidocs=http://localhost:${apidocs.port}/index.cfm
