--- a/tests/test.properties
+++ b/tests/test.properties
@@ -1,1 +1,1 @@
-url.runner=http://railocboxdev.jfetmac/coldbox-core-modules/cbox-relax/tests/runner.cfm?
+url.runner=http://localhost:49616/tests/runner.cfm?
