pass root directory in to tests.xml to ensure correct server.json is used

--- a/workbench/build.xml
+++ b/workbench/build.xml
@@ -155,6 +155,7 @@
     	<subant target="${test.target}">
           	<fileset dir="tests" includes="test.xml"/>
     		<property name="environment" value="${environment}" />
+    		<property name="appdir" value="${basedir}" />
         </subant>
     </target>
     
