--- a/tests/test-auto.properties
+++ b/tests/test-auto.properties
@@ -1,1 +1,1 @@
-url.runner=http://integration.stg.ortussolutions.com/codedepot/cbox-relax/tests/runner.cfm?
+url.runner=http://127.0.0.1:50680/tests/runner.cfm?
