Core updates from testing and travis builds

--- a/workbench/build.xml
+++ b/workbench/build.xml
@@ -3,9 +3,13 @@
 	<!-- Version: UPDATE ON EACH RELEASE AS NEEDED -->
 	<property name="project.name" 		value="coldbox-relax" />
 	<property name="module.name" 		value="relax" />
-	<property name="project.version" 	value="2.3.0"/>
+	<property name="project.version" 	value="2.3.1"/>
 	<property name="groupID" 			value="ortussolutions" />
-	
+
+	<condition property="isTravis" else="false">
+      <isset property="isTravis"/>
+    </condition>
+
 	<!-- Build Labels -->
 	<tstamp prefix="start"/>
 	<path id="cp">
@@ -37,14 +41,20 @@
 		<loadproperties srcFile="workbench/build.properties"/>
 
 		<!-- Build Number -->
-		<propertyfile file="workbench/build.number" comment="Build Number for ANT. Edit not!">
-			<entry key="build.number" 
-					type="int" 
-			     	operation="+"
-					pattern="00000"
-			     	default="1" />
-		</propertyfile>
-		<property file="workbench/build.number"/>
+		<if>
+			<not><isset property="build.number" /></not>
+			<then>
+				<propertyfile file="workbench/build.number" comment="Build Number for ANT. Edit not!">
+					<entry key="build.number" 
+							type="int" 
+					     	operation="+"
+							pattern="00000"
+					     	default="1" />
+				</propertyfile>
+
+				<property file="workbench/build.number"/>
+			</then>
+		</if>
 		
 		<!-- Build Label -->
 		<property name="build.label" value="${project.name}-${project.version}.${build.number}-${start.DSTAMP}${start.TSTAMP}"/>
@@ -59,20 +69,19 @@
 	</target>
 	
 	<!-- Build Project -->
+	<!-- NOTE:  Add run-alt-engine-tests back to `depends` attribute once COMMANDBOX-448 fix is in the current release -->
 	<target name="build" depends="init,run-tests" description="Build the project">
 		<!-- Copy build ID -->
 		<concat destfile="${dir.build}/${build.label}">Built on ${start.TODAY}</concat>
 		
 		<!-- Copy src -->	
-      	<copy todir="${dir.build}" encoding="UTF-8" overwrite="true">
+      	<copy todir="${dir.build}" encoding="UTF-8">
         	<fileset dir="modules/${module.name}" />
         </copy>
-
-        <!-- Copy Assets -->
-        <copy todir="${dir.build}" encoding="UTF-8" overwrite="true">
-        	<fileset file="readme.md"/>
-        	<fileset file="LICENSE"/>
-        </copy>
+        <!-- Copy readme -->
+        <copy todir="${dir.build}" encoding="UTF-8" file="readme.md" overwrite="true" />
+        <copy todir="${dir.build}" encoding="UTF-8" file="changelog.md" overwrite="true" />
+        <copy todir="${dir.build}" encoding="UTF-8" file="instructions.md" overwrite="true" />
         
         <!-- Replace Version + Build Numbers -->
 		<replaceregexp match='@build.version@' replace="${project.version}" flags="ig" byline="true" encoding="UTF-8">
@@ -85,10 +94,10 @@
 		<!-- Api Docs -->
 		<antcall target="build.apidocs" />
         
-        <!-- Zip Project -->
+        <!-- Zip it -->
 		<zip destfile="${dir.exports}/${project.name}-${project.version}.zip" basedir="${dir.build}"></zip>
 		
-		<!-- Build Checksum -->
+		<!-- Build Checksums -->
 		<checksum forceoverwrite="true" fileext=".md5">
 			<fileset dir="${dir.exports}">
 				<include name="*.zip" />
@@ -108,8 +117,13 @@
 				  latest="${project.version}"
 				  classifiers="apidocs"/>
 				  
-		<!-- Cleanup -->
-		<delete dir="${dir.build}" />
+		<!-- Cleanup -->	
+		<if>
+			<equals arg1="$isTravis" arg2="false" />
+			<then>
+				<delete dir="${dir.build}" />
+			</then>
+		</if>
 	</target>
 
 	<!-- Build API Docs -->
@@ -134,27 +148,89 @@
 		<exec executable="box" dir="${dir.apidocs}">
 			<arg line="server stop" />
 		</exec>
+		<delete file="${dir.build}/docbox.html" />
 		<!-- Zip API Docs -->
 		<zip destfile="${dir.exports}/${project.name}-apidocs-${project.version}.zip" basedir="${dir.api}"></zip>
  	</target>
 	
 	<!-- Run Tests For Platform -->
     <target name="run-tests" description="Run TestBox Tests" depends="init">
+    	<!-- Start our default Commandbox server ( L4.5 ) -->
+		<exec executable="box" dir="${basedir}">
+			<arg line="server start" />
+		</exec>
+
     	<echo>Running Tests for ${project.name}</echo>
-    	<property name="test.target" value="run" />
-    	<!-- Run for Core -->
+    	
+    	<!-- Determine Test target: Are we jenkins or local or travis -->
+        <if>
+			<not><equals arg1="${environment}" arg2="auto" /></not>
+			<then>
+				<property name="test.target" value="run" />
+				<property name="isTravis" value="true" />
+			</then>
+			<else>
+				<property name="test.target" value="run-junit" />
+				<property name="isTravis" value="false" />
+			</else>
+		</if>
+
+    	<!-- Run the tests against the default server -->
     	<subant target="${test.target}">
           	<fileset dir="tests" includes="test.xml"/>
     		<property name="environment" value="${environment}" />
-    		<property name="appdir" value="${basedir}" />
         </subant>
+
+        <!-- Stop the default server -->
+        <exec executable="box" dir="${basedir}">
+			<arg line="server stop" />
+		</exec>
+    </target>
+
+
+	<!-- Docker Tests for Different Engines -->
+    <target name="run-alt-engine-tests" description="Run Docker Container Tests" if="isTravis">
+ 		<foreach param="engine" list="lucee5,acf11,acf2016" target="run-alt-engine-test" />
+    </target>
+
+    <target name="run-alt-engine-test" description="In-loop runner for engine tests">
+    	
+    	<property name="serverName" value="${engine}"/>
+
+    	<echo>========= Running CFEngine Tests for: ${engine} ==============</echo>
+
+    	<antcall target="startServer" inheritRefs="true" />
+
+		<subant target="runEngine">
+          	<fileset dir="tests" includes="test.xml"/>
+    		<property name="engine" value="${engine}" />
+    		<property name="environment" value="${environment}" />
+        </subant>
+
+ 		<antcall target="stopServer" inheritRefs="true" />
+
+        <echo>========= CFEngine Tests for ${engine} completed. ==============</echo>
+    	
     </target>
     
     <!-- Get Dependencies -->
-	<target name="getDependencies" description="Get all the necessary dependencies for the build process">
+	<target name="getDependencies" description="Get all the necessary dependencies for the build process using: box.repo.url">
 		<!-- Install dependencies for project -->
 		<exec executable="box" dir="${basedir}">
 			<arg line="install" />
+		</exec>
+	</target>
+
+
+	<target name="startServer" description="Starts a single server">
+		<exec executable="box" dir="${basedir}">
+			<arg line="server start name=${serverName} directory=${basedir} serverConfigFile=${basedir}/workbench/servers/server-${serverName}.json" />
+		</exec>
+	</target>
+
+	<target name="stopServer" description="Stops a single server">
+		<exec executable="box" dir="${basedir}">
+			<arg line="server stop name=${serverName} directory=${basedir} serverConfigFile=${basedir}/workbench/servers/server-${serverName}.json" />
 		</exec>
 	</target>
 
