--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,13 @@
 language: java
 
+env:
+  matrix:
+    - ENGINE=lucee@4.5
+    - ENGINE=lucee@5
+    - ENGINE=adobe@10
+    - ENGINE=adobe@11
+    - ENGINE=adobe@2016
+
 branches:
   only:
   - development
@@ -8,31 +16,42 @@ branches:
 sudo: required
 
 dist: trusty
-
 before_install:
   # CommandBox Keys
   - sudo apt-key adv --keyserver keys.gnupg.net --recv 6DA70622
-  - sudo echo "deb http://integration.stg.ortussolutions.com/artifacts/debs/noarch /" | sudo tee -a
+  - sudo echo "deb http://downloads.ortussolutions.com/debs/noarch /" | sudo tee -a
     /etc/apt/sources.list.d/commandbox.list
 
 install:
   # Install Commandbox
-  - sudo apt-get update && sudo apt-get --assume-yes install commandbox
+  - sudo apt-get update && sudo apt-get --assume-yes install haveged commandbox
   # Test that the box binary is available and ready for our tests
-  - sudo box version
+  - box version
+  # If using auto-publish, you will need to provide your API token with this line:
+  - box config set endpoints.forgebox.APIToken=$FORGEBOX_API_TOKEN > /dev/null
+  # Setup for our tests
+  - mkdir tests/results
+  - sudo chmod -R 775 tests/results
 
 script:
-  - sudo ant -DisTravis=true -Dbuild.number=$TRAVIS_BUILD_NUMBER -f workbench/build.xml
+  - sudo ant -DisTravis=true -Dcfengine=$ENGINE -Dbuild.number=$TRAVIS_BUILD_NUMBER -Dbuild.branch=$TRAVIS_BRANCH -f workbench/build.xml
+
+after_failure:
+  # Spit out our Commandbox log in case we need to debug
+  - box server log name=$ENGINE
+  - cat `box system-log`
   
 before_deploy:
   - mkdir s3deploy
-  - cp -r ./artifacts/swagger-sdk/* ./s3deploy/
+  - cp -r ./artifacts/cbi18n/* ./s3deploy/
   - rm -f ./s3deploy/box-repo.json
 
 deploy:
   on:
     branch: 
       - master
+      - development
+    condition: "$ENGINE = lucee@4.5"
   skip_cleanup: true
   provider: s3
   #AWS Credentials need to be set in Travis
@@ -40,11 +59,11 @@ deploy:
   secret_access_key: $AWS_ACCESS_SECRET
   bucket: "downloads.ortussolutions.com"
   local-dir: s3deploy
-  upload-dir: ortussolutions/coldbox-modules/coldbox-relax
+  upload-dir: ortussolutions/coldbox-modules/cbi18n
   acl: public_read
 
 after_deploy:
-  - cd $TRAVIS_BUILD_DIR/build && box forgebox login username=$FORGEBOX_USERNAME password=$FORGEBOX_PASSWORD && box forgebox publish
+  - cd $TRAVIS_BUILD_DIR/build && box forgebox publish
 
 notifications:
   slack:
