--- a/tests/test.properties
+++ b/tests/test.properties
@@ -1,1 +1,5 @@
-url.runner=http://127.0.0.1:50680/tests/runner.cfm?
+url.runners.lucee@4.5=http://localhost:50680/tests/runner.cfm?
+url.runners.lucee@5=http://localhost:50685/tests/runner.cfm?
+url.runners.adobe@10=http://localhost:49610/tests/runner.cfm?
+url.runners.adobe@11=http://localhost:49611/tests/runner.cfm?
+url.runners.adobe@2016=http://localhost:49616/tests/runner.cfm?
