--- a/workbench/build.xml
+++ b/workbench/build.xml
@@ -6,8 +6,17 @@
 	<property name="project.version" 	value="2.3.1"/>
 	<property name="groupID" 			value="ortussolutions" />
 
+	<!-- Property defaults -->
+	<condition property="cfengine" else="lucee@4.5">
+      <isset property="cfengine"/>
+    </condition>
+
 	<condition property="isTravis" else="false">
       <isset property="isTravis"/>
+    </condition>
+
+    <condition property="build.branch" else="production">
+      <isset property="build.branch"/>
     </condition>
 
 	<!-- Build Labels -->
@@ -55,6 +64,7 @@
 				<property file="workbench/build.number"/>
 			</then>
 		</if>
+
 		
 		<!-- Build Label -->
 		<property name="build.label" value="${project.name}-${project.version}.${build.number}-${start.DSTAMP}${start.TSTAMP}"/>
@@ -69,7 +79,6 @@
 	</target>
 	
 	<!-- Build Project -->
-	<!-- NOTE:  Add run-alt-engine-tests back to `depends` attribute once COMMANDBOX-448 fix is in the current release -->
 	<target name="build" depends="init,run-tests" description="Build the project">
 		<!-- Copy build ID -->
 		<concat destfile="${dir.build}/${build.label}">Built on ${start.TODAY}</concat>
@@ -79,14 +88,37 @@
         	<fileset dir="modules/${module.name}" />
         </copy>
         <!-- Copy readme -->
-        <copy todir="${dir.build}" encoding="UTF-8" file="readme.md" overwrite="true" />
-        <copy todir="${dir.build}" encoding="UTF-8" file="changelog.md" overwrite="true" />
-        <copy todir="${dir.build}" encoding="UTF-8" file="instructions.md" overwrite="true" />
+        <if>
+	        <available file="readme.md"/>
+	        <then>
+		        <copy todir="${dir.build}" encoding="UTF-8" file="readme.md" overwrite="true" />
+	        </then>
+	    </if>
+        <!-- Copy changelog -->
+        <if>
+	        <available file="changelog.md"/>
+	        <then>
+	            <copy todir="${dir.build}" encoding="UTF-8" file="changelog.md" overwrite="true" />
+	        </then>
+	    </if>
         
         <!-- Replace Version + Build Numbers -->
-		<replaceregexp match='@build.version@' replace="${project.version}" flags="ig" byline="true" encoding="UTF-8">
-		  <fileset dir="${dir.build}" />
-		</replaceregexp>
+        <!-- Semantic Versioning for Unstable Builds -->
+        <echo>Updating placeholders for version ${project.version}, branch ${build.branch}, build ${build.number}</echo>
+		<if>
+			<equals arg1="${build.branch}" arg2="development" />
+			<then>
+				<replaceregexp match='@build.version@' replace="${project.version}-snapshot" flags="ig" byline="true" encoding="UTF-8">
+				  <fileset dir="${dir.build}" />
+				</replaceregexp>
+			</then>
+			<else>
+				<replaceregexp match='@build.version@' replace="${project.version}" flags="ig" byline="true" encoding="UTF-8">
+				  <fileset dir="${dir.build}" />
+				</replaceregexp>
+			</else>
+		</if>
+		
 		<replaceregexp match='@build.number@' replace="${build.number}" flags="ig" byline="true" encoding="UTF-8">
 		  <fileset dir="${dir.build}" />
 		</replaceregexp>
@@ -116,10 +148,13 @@
 				  groupID="${groupID}"
 				  latest="${project.version}"
 				  classifiers="apidocs"/>
+		
+		<!-- Copy over box.json to root for convenience -->
+		<copy todir="${dir.exports}" file="${dir.build}/box.json" overwrite="true" encoding="UTF-8" />
 				  
 		<!-- Cleanup -->	
 		<if>
-			<equals arg1="$isTravis" arg2="false" />
+			<equals arg1="${isTravis}" arg2="false" />
 			<then>
 				<delete dir="${dir.build}" />
 			</then>
@@ -152,64 +187,26 @@
 		<!-- Zip API Docs -->
 		<zip destfile="${dir.exports}/${project.name}-apidocs-${project.version}.zip" basedir="${dir.api}"></zip>
  	</target>
-	
-	<!-- Run Tests For Platform -->
-    <target name="run-tests" description="Run TestBox Tests" depends="init">
-    	<!-- Start our default Commandbox server ( L4.5 ) -->
-		<exec executable="box" dir="${basedir}">
-			<arg line="server start" />
-		</exec>
 
-    	<echo>Running Tests for ${project.name}</echo>
+
+	<!-- CFML Engine Tests -->
+    <target name="run-tests" description="In-loop runner for engine tests">
     	
-    	<!-- Determine Test target: Are we jenkins or local or travis -->
-        <if>
-			<not><equals arg1="${environment}" arg2="auto" /></not>
-			<then>
-				<property name="test.target" value="run" />
-				<property name="isTravis" value="true" />
-			</then>
-			<else>
-				<property name="test.target" value="run-junit" />
-				<property name="isTravis" value="false" />
-			</else>
-		</if>
+    	<property name="serverName" value="${cfengine}"/>
 
-    	<!-- Run the tests against the default server -->
-    	<subant target="${test.target}">
-          	<fileset dir="tests" includes="test.xml"/>
-    		<property name="environment" value="${environment}" />
-        </subant>
-
-        <!-- Stop the default server -->
-        <exec executable="box" dir="${basedir}">
-			<arg line="server stop" />
-		</exec>
-    </target>
-
-
-	<!-- Docker Tests for Different Engines -->
-    <target name="run-alt-engine-tests" description="Run Docker Container Tests" if="isTravis">
- 		<foreach param="engine" list="lucee5,acf11,acf2016" target="run-alt-engine-test" />
-    </target>
-
-    <target name="run-alt-engine-test" description="In-loop runner for engine tests">
-    	
-    	<property name="serverName" value="${engine}"/>
-
-    	<echo>========= Running CFEngine Tests for: ${engine} ==============</echo>
+    	<echo>========= Running CFEngine Tests for: ${cfengine} ==============</echo>
 
     	<antcall target="startServer" inheritRefs="true" />
 
 		<subant target="runEngine">
           	<fileset dir="tests" includes="test.xml"/>
-    		<property name="engine" value="${engine}" />
+    		<property name="engine" value="${cfengine}" />
     		<property name="environment" value="${environment}" />
         </subant>
 
  		<antcall target="stopServer" inheritRefs="true" />
 
-        <echo>========= CFEngine Tests for ${engine} completed. ==============</echo>
+        <echo>========= CFEngine Tests for ${cfengine} completed. ==============</echo>
     	
     </target>
     
@@ -224,7 +221,7 @@
 
 	<target name="startServer" description="Starts a single server">
 		<exec executable="box" dir="${basedir}">
-			<arg line="server start name=${serverName} directory=${basedir} serverConfigFile=${basedir}/workbench/servers/server-${serverName}.json" />
+			<arg line="server start --debug name=${serverName} directory=${basedir} serverConfigFile=${basedir}/workbench/servers/server-${serverName}.json" />
 		</exec>
 	</target>
 
@@ -235,3 +232,4 @@
 	</target>
 
 </project>
+
