--- a/workbench/build.xml
+++ b/workbench/build.xml
@@ -198,6 +198,8 @@
 
     	<antcall target="startServer" inheritRefs="true" />
 
+    	<sleep seconds="5"/>
+
 		<subant target="runEngine">
           	<fileset dir="tests" includes="test.xml"/>
     		<property name="engine" value="${cfengine}" />
