--- a/workbench/build.xml
+++ b/workbench/build.xml
@@ -106,7 +106,7 @@
 			<equals arg1="${build.branch}" arg2="development" />
 			<then>
 				<!-- Update to version-snapshot -->
-				<replaceregexp match='+@build.number@' replace="-snapshot" flags="ig" byline="true" encoding="UTF-8">
+				<replaceregexp match='\+@build.number@' replace="-snapshot" flags="ig" byline="true" encoding="UTF-8">
 				  <fileset dir="${dir.build}" />
 				</replaceregexp>
 
