publish api docs for snapshots

--- a/.travis.yml
+++ b/.travis.yml
@@ -88,6 +88,7 @@ deploy:
     on:
       branch: 
         - master
+        - development
       condition: "$ENGINE = lucee@4.5"
     skip_cleanup: true
     #AWS Credentials need to be set in Travis
