--- a/bower.json
+++ b/bower.json
@@ -24,6 +24,10 @@
     "waypoints": "latest",
     "underscore": "~1.8.3",
     "backbone": "~1.2.3",
-    "es6-shim": "~0.34.4"
+    "es6-shim": "~0.34.4",
+    "animate.css": "^3.5.2",
+    "Scrollify": "^1.0.13",
+    "prism": "^1.6.0",
+    "clipboard": "^1.6.1"
   }
 }
