--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
-  "name": "ColdboxRelax",
-  "version": "2.1.0",
+  "name": "coldboxrelax",
+  "repository": "https://github.com/coldbox-modules/coldbox-relax",
+  "license": "Apache-2.0",
+  "version": "2.3.2",
   "devDependencies": {
     "grunt": "^0.4.5",
-    "grunt-contrib-uglify": "~0.9.2",
+    "grunt-contrib-uglify": "^0.9.2",
     "grunt-contrib-watch": "^0.6.1",
-    "grunt-sass": "~1.1.0-beta",
+    "grunt-sass": "^1.1.0",
     "almond": "^0.3.1",
     "grunt-contrib-requirejs": "^0.4.4"
   },
