Eliminate unused properties

--- a/.module.properties
+++ b/.module.properties
@@ -2,4 +2,4 @@ project.name=coldbox-relax
 project.version=2.3.2
 module.name=relax
 # Default CF Engine to Build With
-cfengine=lucee@4.5
+#cfengine=lucee@4.5
