--- a/.travis.yml
+++ b/.travis.yml
@@ -75,7 +75,7 @@ deploy:
       branch: 
         - master
         - development
-      condition: "$ENGINE = lucee@4.5"
+      condition: "( $ENGINE = lucee@4.5 ) && ( $TRAVIS_PULL_REQUEST = false ) && ( ${TRAVIS_REPO_SLUG%%\/*} == 'coldbox-modules' )"
     skip_cleanup: true
     #AWS Credentials need to be set in Travis
     access_key_id: $AWS_ACCESS_KEY
@@ -90,7 +90,7 @@ deploy:
       branch: 
         - master
         - development
-      condition: "$ENGINE = lucee@4.5"
+      condition: "( $ENGINE = lucee@4.5 ) && ( $TRAVIS_PULL_REQUEST = false ) && ( ${TRAVIS_REPO_SLUG%%\/*} == 'coldbox-modules' )"
     skip_cleanup: true
     #AWS Credentials need to be set in Travis
     access_key_id: $AWS_ACCESS_KEY
