--- a/.travis.yml
+++ b/.travis.yml
@@ -67,8 +67,6 @@ before_deploy:
   - mkdir -p s3deploy
   - rsync -av ./artifacts/$PROJECT_NAME/ ./s3deploy/
   - rm -f ./s3deploy/box-repo.json
-  - if [[ ( $ENGINE = lucee@4.5 ) && ( $TRAVIS_PULL_REQUEST = false ) && ( ${TRAVIS_REPO_SLUG%%\/*} == 'coldbox-modules' ) ]]; then RELEASABLE='true'; else RELEASABLE='false'; fi
-  - export DO_RELEASE = "$RELEASABLE"
 
 deploy:
   #Module Deployment
@@ -77,7 +75,7 @@ deploy:
       branch: 
         - master
         - development
-      condition: "$DO_RELEASE = true"
+      condition: "$ENGINE = lucee@4.5"
     skip_cleanup: true
     #AWS Credentials need to be set in Travis
     access_key_id: $AWS_ACCESS_KEY
@@ -92,7 +90,7 @@ deploy:
       branch: 
         - master
         - development
-      condition: "$DO_RELEASE = true"
+      condition: "$ENGINE = lucee@4.5"
     skip_cleanup: true
     #AWS Credentials need to be set in Travis
     access_key_id: $AWS_ACCESS_KEY
