--- a/.travis.yml
+++ b/.travis.yml
@@ -22,7 +22,7 @@ branches:
 dist: trusty
 sudo: required
 before_install: 
-- sudo apt-key adv --keyserver keys.gnupg.net --recv 6DA70622
+- curl -fsSl https://downloads.ortussolutions.com/debs/gpg | sudo apt-key add -
 - sudo echo "deb http://downloads.ortussolutions.com/debs/noarch /" | sudo tee -a /etc/apt/sources.list.d/commandbox.list
 install: 
 - sudo apt-get update && sudo apt-get --assume-yes install git haveged rsync commandbox
