--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.0.2",
+    "node-sass": "*",
     "almond": "^0.3.1",
     "grunt-contrib-requirejs": "^1.0.0"
   },
