--- a/package.json
+++ b/package.json
@@ -3,13 +3,15 @@
   "repository": "https://github.com/coldbox-modules/coldbox-relax",
   "license": "Apache-2.0",
   "devDependencies": {
-    "grunt": "^1.0.3",
+    "almond": "^0.3.1",
+    "grunt": "^1.0.4",
+    "grunt-contrib-requirejs": "^1.0.0",
     "grunt-contrib-uglify": "^4.0.0",
     "grunt-contrib-watch": "^1.1.0",
     "grunt-sass": "^3.0.2",
-    "node-sass": "*",
-    "almond": "^0.3.1",
-    "grunt-contrib-requirejs": "^1.0.0"
+    "node-sass": "*"
   },
-  "dependencies": {}
+  "dependencies": {
+    "grunt-cli": "^1.3.2"
+  }
 }
