some missing issues on travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,7 +49,7 @@ script:
   # run our matrix server
   - box server start serverConfigFile="server-${ENGINE}.json"
   # Startup the app
-  - curl http://localhost:60299
+  #- curl http://localhost:60299
   # Debugging of tests
   #- curl http://localhost:60299/tests/runner.cfm?reporter=json -o testresults.json && cat testresults.json
   # move back to build dir to build it
