--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
     "@vue/babel-plugin-transform-vue-jsx": "^1.1.2",
     "@vue/test-utils": "^1.0.0-beta.29",
+    "admin-lte": "^3.0.4",
     "almond": "^0.3.1",
     "axios": "^0.19.2",
     "bootstrap": "^4.4.1",
