--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "icheck": "^1.0.2",
     "jquery": "^3.4.1",
     "jsdom-global": "^3.0.2",
+    "localforage": "^1.7.3",
     "lodash": "^4.17.15",
     "mocha": "^6.2.2",
     "mocha-webpack": "^2.0.0-beta.0",
@@ -32,6 +33,7 @@
     "vue-prismjs": "^1.2.0",
     "vue-template-compiler": "^2.6.11",
     "vuex": "^3.1.3",
+    "vuex-persist": "^2.2.0",
     "webpack": "^4.42.1"
   },
   "dependencies": {},
