--- a/package.json
+++ b/package.json
@@ -36,7 +36,9 @@
     "vuex-persist": "^2.2.0",
     "webpack": "^4.42.1"
   },
-  "dependencies": {},
+  "dependencies": {
+    "vuejs-dialog": "^1.4.1"
+  },
   "scripts": {
     "dev": "webpack --hide-modules",
     "watch": "npm run dev -- --watch",
