--- a/.travis.yml
+++ b/.travis.yml
@@ -40,6 +40,7 @@ install:
 script:
   # Set Current Version
   - TARGET_VERSION=`cat $TRAVIS_BUILD_DIR/box.json | jq '.version' -r`
+  - TRAVIS_TAG=${TARGET_VERSION}
   - echo "Starting build for ${MODULE_ID} v${TARGET_VERSION}"
   # Replace version so builder can issue it
   - box package set version=@build.version@+@build.number@
@@ -49,7 +50,7 @@ script:
   - box install
   # run our matrix server
   - box server start serverConfigFile="server-${ENGINE}.json"
-  # Startup the app
+  # Startup the app: Uncomment if needed
   #- curl http://localhost:60299
   # Debugging of tests
   #- curl http://localhost:60299/tests/runner.cfm?reporter=json -o testresults.json && cat testresults.json
@@ -57,8 +58,8 @@ script:
   - cd $TRAVIS_BUILD_DIR
   # Build Project
   - box task run taskfile=build/Build target=run :version=${TARGET_VERSION} :projectName=${MODULE_ID} :buildID=${TRAVIS_BUILD_NUMBER} :branch=${TRAVIS_BRANCH}
-  # Cat results for debugging
-  - cat build/results.json
+  # Cat results for debugging: Uncomment if needed
+  #- cat build/results.json
 
 after_failure:
   - cd $TRAVIS_BUILD_DIR/test-harness
@@ -100,6 +101,22 @@ deploy:
     local-dir: $TRAVIS_BUILD_DIR/.tmp/apidocs
     upload-dir: coldbox-modules/$MODULE_ID/$TARGET_VERSION
     acl: public_read
+
+  # Github Release only on Master
+  - provider: releases
+    api_key: ${GITHUB_TOKEN}
+    on:
+      branch:
+        - master
+      condition: "$ENGINE = lucee@5"
+    skip_cleanup: true
+    edge: true
+    file_glob: true
+    file: $TRAVIS_BUILD_DIR/.artifacts/$MODULE_ID/**/*
+    release_notes_file: changelog-latest.md
+    name: v${TRAVIS_TAG}
+    tag_name: v${TRAVIS_TAG}
+    overwrite: true
 
 after_deploy:
   # Move to build out artifact
