--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "^4.4.1",
     "bootstrap-vue": "^2.11.0",
     "chai": "^4.2.0",
-    "coldbox-elixir": "^3.1.2",
+    "coldbox-elixir": "^3.1.7",
     "font-awesome": "^4.7.0",
     "icheck": "^1.0.2",
     "jquery": "^3.4.1",
@@ -32,7 +32,7 @@
     "vue-loader": "^15.9.1",
     "vue-prismjs": "^1.2.0",
     "vue-template-compiler": "^2.6.11",
-    "vuex": "^3.1.3",
+    "vuex": "^3.6.0",
     "vuex-persist": "^2.2.0",
     "webpack": "^4.42.1"
   },
@@ -40,9 +40,9 @@
     "vuejs-dialog": "^1.4.1"
   },
   "scripts": {
-    "dev": "webpack --hide-modules",
+    "dev": "cross-env NODE_ENV=development webpack --env.NODE_ENV=development --hide-modules",
     "watch": "npm run dev -- --watch",
-    "prod": "npm run dev -- -p",
+    "prod": "cross-env NODE_ENV=production webpack -p --env.NODE_ENV=production --hide-modules",
     "test": "mochapack --require resources/assets/js/tests/setup.js --require ignore-styles --require @babel/register --require jsdom-global/register --recursive resources/assets/js/tests/*.spec.js",
     "test-watch": "mochapack --watch --require resources/assets/js/tests/setup.js --require ignore-styles --require @babel/register --require jsdom-global/register --recursive resources/assets/js/tests/*.spec.js",
     "test-modules": "mochapack --require resources/assets/js/tests/setup.js --require ignore-styles --require @babel/register --require jsdom-global/register modules_app/**/resources/assets/js/tests/*.spec.js"
