Convert to Github actions, update webpack, remove references to x-resourceId

--- a/package.json
+++ b/package.json
@@ -3,48 +3,52 @@
   "repository": "https://github.com/coldbox-modules/coldbox-relax",
   "license": "Apache-2.0",
   "devDependencies": {
-    "@babel/plugin-syntax-jsx": "^7.8.3",
-    "@vue/babel-helper-vue-jsx-merge-props": "^1.0.0",
-    "@vue/babel-plugin-transform-vue-jsx": "^1.1.2",
-    "@vue/test-utils": "^1.0.0-beta.29",
-    "admin-lte": "^3.0.4",
+    "@babel/plugin-proposal-decorators": "^7.17.0",
+    "@babel/plugin-transform-flow-strip-types": "^7.16.7",
+    "@simonwep/selection-js": "^2.0.3",
+    "@stomp/stompjs": "^6.1.2",
+    "@vue/babel-plugin-jsx": "^1.1.1",
+    "@vue/cli": "^4.5.15",
+    "@vue/compiler-sfc": "^2.7.14",
+    "@vuelidate/core": "^2.0.0-alpha.34",
+    "@vuelidate/validators": "^2.0.0-alpha.26",
+    "admin-lte": "^3.2.0",
     "almond": "^0.3.1",
     "axios": "^0.21.1",
     "bootstrap": "^4.4.1",
-    "bootstrap-vue": "^2.11.0",
+    "bootstrap-vue": "^2.23.1",
     "chai": "^4.2.0",
-    "coldbox-elixir": "^3.1.11",
+    "coldbox-elixir": "^4",
     "font-awesome": "^4.7.0",
     "icheck": "^1.0.2",
     "jquery": "^3.5.1",
     "jsdom-global": "^3.0.2",
     "localforage": "^1.7.3",
     "lodash": "^4.17.19",
-    "mocha": "^6.2.2",
-    "mocha-webpack": "^2.0.0-beta.0",
-    "mochapack": "^1.1.5",
-    "node-sass": "^4.13.1",
+    "mocha": "^8.0.0",
+    "mocha-loader": "^5.1.5",
     "popper.js": "^1.16.1",
-    "prismjs": "^1.20.0",
+    "prismjs": "^1.29.0",
+    "sass": "^1.49.7",
     "sass-loader": "^8.0.2",
-    "url-loader": "^4.1.0",
-    "vue": "^2.6.11",
-    "vue-loader": "^15.9.1",
+    "vue": "^2.7.14",
+    "vue-loader": "^15.10.0",
     "vue-prismjs": "^1.2.0",
-    "vue-template-compiler": "^2.6.11",
     "vuex": "^3.6.0",
     "vuex-persist": "^2.2.0",
-    "webpack": "^4.42.1"
+    "webpack": "^5.74.0",
+    "webpack-cli": "^4.10.0"
   },
   "dependencies": {
+    "babel-runtime": "^6.26.0",
     "vuejs-dialog": "^1.4.1"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack --env.NODE_ENV=development --hide-modules",
+    "dev": "webpack --node-env development",
     "watch": "npm run dev -- --watch",
-    "prod": "cross-env NODE_ENV=production webpack -p --env.NODE_ENV=production --hide-modules",
-    "test": "mochapack --require resources/assets/js/tests/setup.js --require ignore-styles --require @babel/register --require jsdom-global/register --recursive resources/assets/js/tests/*.spec.js",
-    "test-watch": "mochapack --watch --require resources/assets/js/tests/setup.js --require ignore-styles --require @babel/register --require jsdom-global/register --recursive resources/assets/js/tests/*.spec.js",
-    "test-modules": "mochapack --require resources/assets/js/tests/setup.js --require ignore-styles --require @babel/register --require jsdom-global/register modules_app/**/resources/assets/js/tests/*.spec.js"
+    "prod": "webpack --node-env production",
+    "test": "mocha --require resources/assets/js/tests/setup.js --require ignore-styles --require @babel/register --require jsdom-global/register --recursive resources/assets/js/tests/*.spec.js",
+    "test-watch": "mocha --watch --require resources/assets/js/tests/setup.js --require ignore-styles --require @babel/register --require jsdom-global/register --recursive resources/assets/js/tests/*.spec.js",
+    "test-modules": "mocha --require resources/assets/js/tests/setup.js --require ignore-styles --require @babel/register --require jsdom-global/register modules_app/**/resources/assets/js/tests/*.spec.js"
   }
 }
